@@ -1,0 +1,10 @@
+[Log]
+DB_Query_NG = "/var/log/snct-dialer/DB_Query_NG.log"
+GenRealTime = "/var/log/snct-dialer/GenRealTime.log"
+
+[Checkcallback]
+AgentCount = "25"
+AgentDays  = "today"
+LeadCount  = "5"
+LeadDays   = "- 7 day"
+
