@@ -1,0 +1,13 @@
+[Database]
+VARDB_backup_user=
+VARDB_backup_pass=
+
+[Path]
+PATHbackup=/var/backups/SNCT-dialer
+
+[Server]
+Server_name=
+
+[Backup]
+BackupHour=1
+WebPath2=/var/www/htmlssl
