@@ -1,0 +1,11 @@
+# please use scnt-dialer for your own setuo
+
+#
+# Token
+# Key -> 40-digit numeric key
+# Name -> Token - Name
+# Time -> Validity in seconds
+[Login]
+Key= 
+Name=
+Time=64800
