@@ -1,0 +1,12 @@
+[Database]
+Server=10.100.0.17
+Database=aserisk
+User=cron
+Pass=1234
+Custom_user=custom
+Custom_pass=custom1234
+Port=3306
+
+[Log]
+File=SYSLOG
+
